# netorium

./: .dockerignore  .gitignore  Dockerfile  NETORIUM_GUIDE.md  README.md  RELEASE_BUILD.md  TESTING_RU.md  fix_uninstaller.py  get.ps1  get.sh  install-agent.ps1  install-agent.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: release.yml
netgate/: __init__.py  __main__.py
netgate/cli/: __init__.py  app.py
netgate/core/: __init__.py  metadata.py
netgate/services/: __init__.py
netorium/: __init__.py  __main__.py
netorium/cli/: __init__.py  agent.py  app.py  branding.py  help_renderer.py
netorium/core/: __init__.py  audit.py  database.py  docs.py  metadata.py  network.py  platform.py  settings.py  subprocess_utils.py
netorium/docs/: __init__.py  commands.md  examples.md  index.md  install.md  troubleshooting.md
netorium/services/: __init__.py  ad_client.py  agent.py  command_signing.py  controller.py  controller_service.py  deploy.py  devices.py  endpoint_policy.py  firewall.py  linux_service_runtime.py  prtg_client.py  telegram_bot.py  telegram_client.py  traffic.py  traffic_monitor.py  uninstaller.py  update_checker.py  update_notifications.py  windows_background.py  windows_nssm.py  windows_service.py  zones.py
packaging/: netorium.spec  standalone_entry.py
scripts/: build-standalone.sh  build-windows.ps1
tests/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  path_helpers.py  test_ad_cli.py  test_ad_client.py  test_agent_cli.py  test_agent_service.py  test_cli.py  test_config_cli.py  test_config_core.py  test_controller_cli.py  test_controller_service.py  test_database_core.py  test_deploy_cli.py  test_deploy_service.py  test_device_cli.py  test_device_service.py  test_docs_cli.py  test_docs_core.py  test_endpoint_policy.py  test_firewall_cli.py  test_firewall_service.py  test_install_scripts.py  test_linux_service_runtime.py  test_prtg_cli.py  test_prtg_client.py  test_report.py  test_subprocess_utils.py  test_telegram_bot.py  test_telegram_cli.py  test_telegram_client.py  test_update_checker.py  (+7 more)
(+15 files in other folders)
